go-sercure-token/secure-token-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gosecuretoken-service
spec:
  selector:
    app: gosecuretoken
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
