go-sercure-token/secure-token-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gosecuretoken-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gosecuretoken.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gosecuretoken-service
            port:
              number: 8080
